# Thesis_project

./: So_tay_nhan_vien.txt  env_devtest.txt  ouput.json  pyproject.toml  sql_query_responses.csv  sql_query_responses_1 copy.csv  sql_query_responses_1.csv  temp.py  test.py
notebooks/: AzureAIAearch.ipynb  Azure_LLM_connection.ipynb  LocalHosting_Llama.ipynb
public/: questions.csv  schema.csv
src/: graph.py  main.py  serializer.py  view.py
src/data_ingestion/: ingestion.py  test_memory.py
src/routers/: chatbot.py  tables.py
src/services/: LLM_connector.py  database.py  prompt_function.py  prompt_template.py  template.py  vector_service.py
src/services/knowledge_graph/: knowledge_graph_template.py  knowledge_retrieve.py  script_gremlin_connection.py  script_test_document.py
src/services/knowledge_graph.py/: knowledge_graph_template.py  knowledge_retrieve.py  llm_connection.py  script_gremlin_connection.py
src/services/knowledge_graph.py/sale_reports/: sale_report_2019.json  sale_report_2020.json  sale_report_2022.json  sale_year_report.json
src/services/knowledge_graph/sale_reports/: document.json  sale_report_2021.json  sale_report_2023.json  sale_report_2024.json
src/utils/: sql_handler.py
